Added reload command.